samples/_failures_safe/1761450912_5f3153_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d64a9360.c: In function ‘main’:
./samples/SAFE/__tmp_d64a9360.c:146:48: error: expected ‘)’ at end of input
  146 |     if (fgets(input_buffer, sizeof(input_buffer
      |                                   ~            ^
      |                                                )
./samples/SAFE/__tmp_d64a9360.c:146:9: error: too few arguments to function ‘fgets’
  146 |     if (fgets(input_buffer, sizeof(input_buffer
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_d64a9360.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_d64a9360.c:146:5: error: expected declaration or statement at end of input
  146 |     if (fgets(input_buffer, sizeof(input_buffer
      |     ^~
